k8s/frontend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend-service
spec:
  type: ClusterIP
  selector:
    app: inventory-frontend
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-frontend-app
spec:
  selector:
    matchLabels:
      app: inventory-frontend
  template:
    metadata:
      labels:
        app: inventory-frontend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: frontend-app
        image: 688035105164.dkr.ecr.us-east-1.amazonaws.com/frontend-inventory:v26
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
